Fix color for footer on mobile version

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -236,7 +236,7 @@ body { /** GENERIC STYLING OF TEXT maaroon #61122f**/
 
 .panel-footer{
     padding: 35px 0 30px 0;
-    background: #242526;
+    background: #222;
     margin-top: 15px;
     font-size: 90%;
 }
